# speed-test-internet

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
tests/: test_speed_test.py
utils/: logger.py  speed_test.py
