[project]
name = "speed-test-internet"
version = "0.1.0"
description = ""
authors = [
    {name = "alexsemyonovv",email = "aleksandrsemyonov929@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false